[package]
name = "qt_cef_poc"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
build = "build.rs"

[dependencies]
qt_core = "0.2"
qt_widgets = "0.2"
cef-sys = { path = "cef-sys" }
kernel32-sys = "0.2"
winapi = "0.2"
log = "0.3"
env_logger = "0.3"

[build-dependencies]
embed-resource = "1.1"